<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteSmoke"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/statusBar_height"
        android:orientation="vertical">

        <!--通知栏-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="@drawable/rounded_corner">

            <!--评论-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/icon_diameter"
                    android:layout_height="@dimen/icon_diameter"
                    android:src="@drawable/comment"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/bottom_menu_position_center_menu_first"/>
            </LinearLayout>

            <!--点赞和收藏-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/icon_diameter"
                    android:layout_height="@dimen/icon_diameter"
                    android:src="@drawable/like"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/bottom_menu_position_center_menu_second"/>
            </LinearLayout>

            <!--新增粉丝-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/icon_diameter"
                    android:layout_height="@dimen/icon_diameter"
                    android:src="@drawable/fans"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/bottom_menu_position_center_menu_third"/>
            </LinearLayout>
        </LinearLayout>

        <!--聊天对象-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_object_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner"/>
    </LinearLayout>
</LinearLayout>
