<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="isLoggedIn"
            type="boolean" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.menu.MineFragment">

        <org.nuist.blogapp.custom.ReboundScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding"
                android:background="@color/whiteSmoke">

                <!--登录位-->
                <!--登录前-->
                <ViewStub
                    android:id="@+id/login_stub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout="@layout/fragment_mine_login_layout"/>
                <!--登录后（默认隐藏）-->
                <ViewStub
                    android:id="@+id/logged_in_stub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout="@layout/fragment_mine_logged_in_layout"/>

                <!--广告位-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/statusBar_highest"
                    android:background="@drawable/rounded_corner"
                    android:src="@drawable/img"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:scaleType="centerInside"/>

                <!--状态栏1-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <!--元素1-->
                    <LinearLayout
                        android:id="@+id/user_server_item_first"
                        android:layout_width="@dimen/statusBar_higher"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/icon_diameter"
                        android:layout_marginLeft="@dimen/icon_diameter"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/user_server_image_first"
                            android:layout_width="@dimen/icon_diameter"
                            android:layout_height="@dimen/icon_diameter"
                            android:src="@drawable/user_menu_left_first"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="11sp"
                            android:text="@string/user_menu_left_first"/>
                    </LinearLayout>
                    <!--元素2-->
                    <LinearLayout
                        android:id="@+id/user_server_item_second"
                        android:layout_width="@dimen/statusBar_higher"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/icon_diameter"
                        android:layout_marginLeft="@dimen/icon_diameter"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/user_server_image_second"
                            android:layout_width="@dimen/icon_diameter"
                            android:layout_height="@dimen/icon_diameter"
                            android:src="@drawable/user_menu_left_second"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_menu_left_second"
                            android:textSize="11sp" />
                    </LinearLayout>
                </LinearLayout>

                <!--状态栏2-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="创作中心"
                        android:layout_gravity="left"
                        android:layout_marginLeft="30dp"
                        android:textSize="12sp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <!--元素1-->
                        <LinearLayout
                            android:id="@+id/creation_menu_item_first"
                            android:layout_width="@dimen/statusBar_higher"
                            android:layout_height="match_parent"
                            android:layout_marginRight="@dimen/icon_diameter"
                            android:layout_marginLeft="@dimen/icon_diameter"
                            android:gravity="center"
                            android:orientation="vertical">
                            <ImageView
                                android:id="@+id/creation_menu_image_first"
                                android:layout_width="@dimen/icon_diameter"
                                android:layout_height="@dimen/icon_diameter"
                                android:src="@drawable/creation_menu_left_first"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="11sp"
                                android:text="@string/creation_menu_left_first"/>
                        </LinearLayout>
                        <!--元素2-->
                        <LinearLayout
                            android:id="@+id/creation_menu_item_second"
                            android:layout_width="@dimen/statusBar_higher"
                            android:layout_height="match_parent"
                            android:layout_marginRight="@dimen/icon_diameter"
                            android:layout_marginLeft="@dimen/icon_diameter"
                            android:gravity="center"
                            android:orientation="vertical">
                            <ImageView
                                android:id="@+id/creation_menu_image_second"
                                android:layout_width="@dimen/icon_diameter"
                                android:layout_height="@dimen/icon_diameter"
                                android:src="@drawable/creation_menu_left_second"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/creation_menu_left_second"
                                android:textSize="11sp" />
                        </LinearLayout>
                    </LinearLayout>
                    </LinearLayout>
            </LinearLayout>
        </org.nuist.blogapp.custom.ReboundScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/statusBar_height"
            android:layout_gravity="top"/>

        <ImageView
            android:layout_width="@dimen/statusBar_item_height"
            android:layout_height="@dimen/statusBar_item_height"
            android:layout_marginTop="@dimen/statusBar_item_marginTop"
            android:layout_marginRight="@dimen/statusBar_height_half"
            android:layout_marginLeft="@dimen/statusBar_height_half"
            android:src="@drawable/settings"
            android:layout_gravity="right"/>

    </FrameLayout>

</layout>
